export const snapshot = {};

snapshot[`Cycle Next Command - Help Text 1`] = `
stdout:
"
Usage: next

Description:

  Show the next upcoming cycle for a team

Options:

  -h, --help          - Show this help.                      
  --team      <team>  - Team key (defaults to current team)  
  -j, --json          - Output as JSON                       

Examples:

  Show the next cycle as JSON              linear cycle next --team ENG --json
  Show the next cycle for the default team linear cycle next                  

"
stderr:
""
`;

snapshot[`Cycle Next Command - Shows Upcoming Cycle 1`] = `
stdout:
"# Sprint 43

Number: 43
Starts: 1/27/2026
Ends: 2/10/2026

## Description

Planning for Q2 features


## Issues (1)

- ENG-200: Plan Q2 roadmap [Todo]
"
stderr:
""
`;

snapshot[`Cycle Next Command - JSON Output 1`] = `
stdout:
'{
  "id": "cycle-2",
  "number": 43,
  "name": "Sprint 43",
  "description": "Planning for Q2 features",
  "startsAt": "2026-01-27T00:00:00Z",
  "endsAt": "2026-02-10T00:00:00Z",
  "completedAt": null,
  "status": "upcoming",
  "isActive": false,
  "isFuture": true,
  "isPast": false,
  "progress": 0,
  "createdAt": "2026-01-15T00:00:00Z",
  "updatedAt": "2026-01-20T00:00:00Z",
  "team": {
    "id": "team-1",
    "key": "ENG",
    "name": "Engineering"
  },
  "issueSummary": {
    "total": 1,
    "completed": 0,
    "started": 0,
    "unstarted": 1,
    "backlog": 0,
    "triage": 0,
    "canceled": 0
  },
  "issues": [
    {
      "id": "issue-1",
      "identifier": "ENG-200",
      "title": "Plan Q2 roadmap",
      "state": {
        "name": "Todo",
        "type": "unstarted",
        "color": "#94a3b8"
      }
    }
  ]
}
'
stderr:
""
`;

snapshot[`Cycle Next Command - No Upcoming Cycle 1`] = `
stdout:
"No upcoming cycle found for team ENG
"
stderr:
""
`;

snapshot[`Cycle Next Command - JSON No Upcoming Cycle 1`] = `
stdout:
"null
"
stderr:
""
`;
